# filepreview

./: .flaskenv  .gitignore  README.md  make_svg.py  pyproject.toml  structure.txt
filepreview/: __init__.py  config.py
filepreview/api/: file_routes.py  image_routes.py  utils.py
filepreview/main/: models.py  views.py
filepreview/models/: models.py
filepreview/static/: file_display.css  file_viewer.css  page_header.css  page_link.css  styles.css  viewer.js
filepreview/templates/: file.html  group.html  index.html
run/: cad_import.py  cad_test.py  instructions.txt  make_images.py
src/filepreview/: __init__.py  config.py
src/filepreview/api/: file_routes.py  image_routes.py  utils.py
src/filepreview/main/: models.py  views.py
src/filepreview/static/: home_link.css  index.js  loadIndex.js  viewer.js
src/filepreview/templates/: file.html  group.html  index.html
tests/: example.py  post.py  test_api.py  test_api_file_routes.py  test_file_api.py
