[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "filepreview"
version = "0.0.1"
authors = [
    { name="Ryan Hunter", email="ryanhunter237@gmail.com" },
]
description = "A file preview app"
readme = "README.md"
dependencies = [
    "flask",
    "flask_sqlalchemy",
]